--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,18 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+			    <groupId>org.cyclonedx</groupId>
+			    <artifactId>cyclonedx-maven-plugin</artifactId>
+			    <version>2.7.9</version>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>makeBom</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
