--- a/pom.xml
+++ b/pom.xml
@@ -77,11 +77,11 @@
 			<plugin>
 			    <groupId>org.spdx</groupId>
 			    <artifactId>spdx-maven-plugin</artifactId>
-			    <version>2.3.0</version>
+			    <version>0.6.5</version>
 			    <executions>
 			      <execution>
 			        <goals>
-			          <goal>create</goal>
+			          <goal>createSPDX</goal>
 			        </goals>
 			      </execution>
 			    </executions>
